--- a/_posts/2018-10-15-demo-2015.markdown
+++ b/_posts/2018-10-15-demo-2015.markdown
@@ -65,9 +65,13 @@ Theme 的 CSS 是基于 Bootstrap 定制的，看得不爽的地方直接在 Les
 
 ## DEMO
 说好的demo,粘贴一段代码看看什么样子。
-public static void main(String[] args) {
-		SpringApplication.run(EnergyAppApplication.class, args);
-	}
+`` `java  
+public class Test{  
+public static void main(String[] args) {  
+System.out.println("Hello, world!");  
+}  
+}  
+`` `  
 
 ## 后记
 
