--- a/_posts/java/2018-10-15-emoji-2018.markdown
+++ b/_posts/java/2018-10-15-emoji-2018.markdown
@@ -7,7 +7,8 @@ author:     "kwt"
 header-img: "img/post-bg-2015.jpg"
 catalog: true
 tags:
-    - demo
+    - java
+    - emoji
 ---
 ·
 > “Yeah It's on. ”
