--- a/_posts/2018-10-15-demo-2018.markdown
+++ b/_posts/2018-10-15-demo-2018.markdown
@@ -4,7 +4,7 @@ title:      "Hello 2018"
 subtitle:   " \"Hello World,Hello Blog,This a demo.\""
 date:       2018-10-15 16:00:00
 author:     "kwt"
-header-img: "img/post-bg-2015.jpg"
+header-img: 
 catalog: true
 tags:
     - demo
