--- a/_posts/java/springboot/2018-10-20-cloud.markdown
+++ b/_posts/java/springboot/2018-10-20-cloud.markdown
@@ -7,10 +7,9 @@ author:     "kwt"
 header-img: 
 catalog: true
 tags:
-    - elk
-    - install
     - java
-    - linux
+    - spring cloud
+    - spring boot
 ---
 ·
 > “elk is very good!”
